Add main mushroom photo, photo credit, and introduction to mushroom foraging.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Wild Mushrooms of Arizona</title>
   </head>
   <body>
-
-
-
+    <center><h1><font face="courier" color="#663300">Wild Mushrooms of Arizona</font></h1>
+    <img src="mush1.jpg" alt="Mushrooms in the White Mountains, AZ">
+    <p><i>Photo by Britt Flowers - White Mountain Range of Arizona</i>
+    <p><font face="courier">There are thousands of species of wild mushrooms that exist throughout Arizona. Some are edible, while many are not. When it comes to edibility, being armed with knowledge is imperative to your health as some species can be deadly. Foraging for mushrooms is not only a lot of fun and a great learning experience... but also a way to feel more connected to nature and the food it has to offer. Nothing is more gratifying than stumbling upon a thick patch of delicious Chantarelles in the forest that you can cook up for dinner. The key to mushroom identification is to keep handy guidebooks while foraging and take thorough examination of all parts of the fungi. Further clarification can be made via spore printing, or asking a local mycologist. It is best to only consume a tiny amount of your first find of any fungi and wait. This allows you to be sure that you have properly identified the mushroom and that no ill effects will be had. Once the mushroom has passed the test, enjoy!
+    </font>
+    </center>
 
 
 
