Add table containing foraging equipment and instructions

--- a/index.html
+++ b/index.html
@@ -7,8 +7,33 @@
     <center><h1><font face="courier" color="#663300">Wild Mushrooms of Arizona</font></h1>
     <img src="mush1.jpg" alt="Mushrooms in the White Mountains, AZ">
     <p><i>Photo by Britt Flowers - White Mountain Range of Arizona</i>
-    <p><font face="courier">There are thousands of species of wild mushrooms that exist throughout Arizona. Some are edible, while many are not. When it comes to edibility, being armed with knowledge is imperative to your health as some species can be deadly. Foraging for mushrooms is not only a lot of fun and a great learning experience... but also a way to feel more connected to nature and the food it has to offer. Nothing is more gratifying than stumbling upon a thick patch of delicious Chantarelles in the forest that you can cook up for dinner. The key to mushroom identification is to keep handy guidebooks while foraging and take thorough examination of all parts of the fungi. Further clarification can be made via spore printing, or asking a local mycologist. It is best to only consume a tiny amount of your first find of any fungi and wait. This allows you to be sure that you have properly identified the mushroom and that no ill effects will be had. Once the mushroom has passed the test, enjoy!
+    <p>
+    <font face="courier" color="#000000">
+    There are thousands of species of wild mushrooms that exist throughout Arizona. Some are edible, while many are not. When it comes to edibility, being armed with knowledge is imperative to your health as some species can be deadly. Foraging for mushrooms is not only a lot of fun and a great learning experience... but also a way to feel more connected to nature and the food it has to offer. Nothing is more gratifying than stumbling upon a thick patch of delicious Chantarelles in the forest that you can cook up for dinner. The key to mushroom identification is to keep handy guidebooks while foraging and take thorough examination of all parts of the fungi. Further clarification can be made via spore printing, or asking a local mycologist. It is best to only consume a tiny amount of your first find of any fungi and wait. This allows you to be sure that you have properly identified the mushroom and that no ill effects will be had. Once the mushroom has passed the test, enjoy!
     </font>
+    <p>
+      <h1><font face="courier" color="#663300">Foraging Equipment & Basics</font></h1>
+      <table width="600" border="1">
+        <tr>
+          <th width="100">Tools For Foraging</th>
+          <th>Tool Uses</th>
+        </tr>
+        <tr>
+          <td>A Basket</td>
+          <td>A sturdy basket is necessary for foraging as the natural holes that exist within it's weaving allow for microscopic spores to escape from the mushrooms and fall to the ground while you are walking through the forest. This keeps the fungi population of that area thriving. Mesh bags and baskets are also perfectly acceptable.</td>
+        </tr>
+        <tr>
+          <td>A Knife</td>
+          <td>A knife is important for properly cutting the stem at the base of the mushroom to retrieve it from the ground. This is preferable to ripping it out of the ground, as it helps to prevent disruption of the underground mycelium network.</td>
+        <tr>
+          <td>A Brush</td>
+          <td>A haired brush helps to remove dirt and particles from the mushroom while harvesting, without causing damage or bruising.</td>
+        </tr>
+        <tr>
+          <td>A Guidebook</td>
+          <td>A mushroom guidebook is best to carry on your foray to allow for identification. Cell phone service is not always readily available out in the forest, so having a guidebook that is specific to the species that inhabit your area is the best way to help you identify the fungi.</td>
+
+      </table>
     </center>
 
 
