Add Basic Precautions list

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <body>
     <center><h1><font face="courier" color="#663300">Wild Mushrooms of Arizona</font></h1>
     <img src="mush1.jpg" alt="Mushrooms in the White Mountains, AZ">
-    <p><i>Photo by Britt Flowers - White Mountain Range of Arizona</i>
+    <p><i>Photo by Britt Flowers - White Mountain Range of Arizona</i></center>
     <p>
     <font face="courier" color="#000000">
-    There are thousands of species of wild mushrooms that exist throughout Arizona. Some are edible, while many are not. When it comes to edibility, being armed with knowledge is imperative to your health as some species can be deadly. Foraging for mushrooms is not only a lot of fun and a great learning experience... but also a way to feel more connected to nature and the food it has to offer. Nothing is more gratifying than stumbling upon a thick patch of delicious Chantarelles in the forest that you can cook up for dinner. The key to mushroom identification is to keep handy guidebooks while foraging and take thorough examination of all parts of the fungi. Further clarification can be made via spore printing, or asking a local mycologist. It is best to only consume a tiny amount of your first find of any fungi and wait. This allows you to be sure that you have properly identified the mushroom and that no ill effects will be had. Once the mushroom has passed the test, enjoy!
+    There are thousands of species of wild mushrooms that exist throughout Arizona. Some are edible, while many are not. When it comes to edibility, being armed with knowledge is imperative to your health as some species can be deadly. Foraging for mushrooms is not only a lot of fun and a great learning experience... but also a way to feel more connected to nature and the food it has to offer. Nothing is more gratifying than stumbling upon a thick patch of delicious Chantarelles in the forest that you can cook up for dinner. The key to mushroom identification is to keep handy guidebooks while foraging and take thorough examination of all parts of the fungi. Further clarification can be made via spore printing, or asking a local mycologist. It is best to only consume a tiny amount of your first find of any fungi and wait. This allows you to be sure that you have properly identified the mushroom and that no ill effects will be had. Once the mushroom have passed the edibility test, enjoy!
     </font>
     <p>
-      <h1><font face="courier" color="#663300">Foraging Equipment & Basics</font></h1>
+      <h1><font face="courier" color="#663300">Foraging Equipment & Use</font></h1>
       <table width="600" border="1">
         <tr>
           <th width="100">Tools For Foraging</th>
@@ -32,9 +32,22 @@
         <tr>
           <td>A Guidebook</td>
           <td>A mushroom guidebook is best to carry on your foray to allow for identification. Cell phone service is not always readily available out in the forest, so having a guidebook that is specific to the species that inhabit your area is the best way to help you identify the fungi.</td>
-
+        </tr>
       </table>
-    </center>
+    <p><h1><font face="courier" color="#663300">Basic Precautions</font></h1>
+    <p>
+      <ul>
+        <li>If you cannot confidently identify a species of mushroom, <strong>DO NOT EAT IT!</strong></li>
+        <li>Do not mix multiple mushroom species in one meal, unless you have eaten them separately prior and have previously identified and consumed them.</li>
+        <li>When you are cooking a new species for the first time, do <u>not</u> cook all of what you harvested. Reserve some for identification in case of sickness.</li>
+        <li>Eat only a <strong>small</strong> portion of a new species the first time you prepare it.</li>
+        <li>Some species of mushrooms contain natural <i>Antabuse</i>, which combines with alcohol and produces nausea, mental confusion, difficulty breathing, etc. It is important to know what those species are, and not drink alcohol with them or the day after. </li>
+        <li>Don't feed wild mushrooms to small children.</li>
+        <li>Don't eat or freeze raw mushrooms.</li>
+        <li><strong>Looks are deceiving.</strong> Some of the best edible mushrooms are weird looking, while some of the most delicious looking ones are the most toxic. Do not eat based on looks.</li>
+        <li>Many species have look-a-likes, so it is <i>imperative</i> that you do a thorough investigation of all parts of a mushroom to confirm it's species and that it is not a look-a-like.</li>
+        <li><strong>Soil can be toxic.</strong> Toxicity can come from where it grew, not just the mushroom itself. Lawns and mulch are often chemically treated. Beware of harvesting from any lawn or area that may have been treated with pesticides or other chemical compounds.</li>
+      </ul>
 
 
 
