Add example images and descriptions of edible Arizona mushrooms

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>Wild Mushrooms of Arizona</title>
   </head>
   <body>
-    <center><h1><font face="courier" color="#663300">Wild Mushrooms of Arizona</font></h1>
+    <center><h1><font face="courier" color="#663300">Foraging for Wild Mushrooms of Arizona</font></h1>
     <img src="mush1.jpg" alt="Mushrooms in the White Mountains, AZ">
     <p><i>Photo by Britt Flowers - White Mountain Range of Arizona</i></center>
     <p>
     <font face="courier" color="#000000">
-    There are thousands of species of wild mushrooms that exist throughout Arizona. Some are edible, while many are not. When it comes to edibility, being armed with knowledge is imperative to your health as some species can be deadly. Foraging for mushrooms is not only a lot of fun and a great learning experience... but also a way to feel more connected to nature and the food it has to offer. Nothing is more gratifying than stumbling upon a thick patch of delicious Chantarelles in the forest that you can cook up for dinner. The key to mushroom identification is to keep handy guidebooks while foraging and take thorough examination of all parts of the fungi. Further clarification can be made via spore printing, or asking a local mycologist. It is best to only consume a tiny amount of your first find of any fungi and wait. This allows you to be sure that you have properly identified the mushroom and that no ill effects will be had. Once the mushroom have passed the edibility test, enjoy!
+    There are thousands of species of wild mushrooms that exist throughout Arizona. Some are edible, while many are not. When it comes to edibility, being armed with knowledge is imperative to your health as some species can be deadly. Foraging for mushrooms is not only a lot of fun and a great learning experience... but also a way to feel more connected to nature and the food it has to offer. Nothing is more gratifying than stumbling upon a thick patch of delicious Chanterelles in the forest that you can cook up for dinner. The key to mushroom identification is to keep handy guidebooks while foraging and take thorough examination of all parts of the fungi. Further clarification can be made via spore printing, or asking a local mycologist. It is best to only consume a tiny amount of your first find of any fungi and wait. This allows you to be sure that you have properly identified the mushroom and that no ill effects will be had. Once the mushroom has passed the edibility test, enjoy the rest!
     </font>
     <p>
       <h1><font face="courier" color="#663300">Foraging Equipment & Use</font></h1>
@@ -48,6 +48,22 @@
         <li>Many species have look-a-likes, so it is <i>imperative</i> that you do a thorough investigation of all parts of a mushroom to confirm it's species and that it is not a look-a-like.</li>
         <li><strong>Soil can be toxic.</strong> Toxicity can come from where it grew, not just the mushroom itself. Lawns and mulch are often chemically treated. Beware of harvesting from any lawn or area that may have been treated with pesticides or other chemical compounds.</li>
       </ul>
+    <p>
+      <h1><font face="courier" color="#663300">Edible Species Found in Arizona</font></h1><p>
+      <i>Here are some delicious species of mushrooms you can forage for in Arizona!</i>
+    <p>
+      <h2><font face="courier" color="#663300">Chanterelle Mushroom (<i>Cantharellus Cibarius</i>)</font></h2><p>
+      <img src="chantmush.jpg" alt="Chanterelle Mushroom"><p>
+      <i>Photo Credit: Britt Flowers</i>
+    <p>
+      <h2><font face="courier" color="#663300">Oyster Mushroom (<i>Genus Pleurotus</i>)</font></h2><p>
+      <img src="oystermush.jpg" alt="Oyster Mushroom"><p>
+      <i>Photo Credit: www.tanelorn.us</i>
+    <p>
+      <h2><font face="courier" color="#663300">Boletus Barrowsii Mushroom</font></h2><p>
+      <img src="boletusbarrowsii.jpg" alt="Boletus Barrowsii"><p>
+      <i>Photo Credit: Arizona Mushroom Forum</i>
+
 
 
 
