Add footer containing a link to a similar site and discuss

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       </ul>
     <p>
       <h1><font face="courier" color="#663300">Edible Species Found in Arizona</font></h1><p>
-      <i>Here are some delicious species of mushrooms you can forage for in Arizona!</i>
-    <p>
+      <i>Here are some delicious species of mushrooms you can forage for in Arizona!</i><p>
+      <b>For a complete list of edible mushrooms of Arizona by species and season <a href="./azmushroomseason.html">CLICK HERE</a></b><p>
       <h2><font face="courier" color="#663300">Chanterelle Mushroom (<i>Cantharellus Cibarius</i>)</font></h2><p>
       <img src="chantmush.jpg" alt="Chanterelle Mushroom"><p>
       <i>Photo Credit: Britt Flowers</i>
@@ -63,6 +63,9 @@
       <h2><font face="courier" color="#663300">Boletus Barrowsii Mushroom</font></h2><p>
       <img src="boletusbarrowsii.jpg" alt="Boletus Barrowsii"><p>
       <i>Photo Credit: Arizona Mushroom Forum</i>
+    <p>
+      <footer><h2><font face="courier" color="#663300">More About Arizona Mushrooms</font></h2><p>
+      The <a href="http://www.arizona-mushrooms.org">Arizona Mushroom Forum</a> is a great website to find out more about mushroom foraging in Arizona. The website is very well-organized and easy to navigate. It contains tables, forms, search buttons, blog posts, a discussion forum, photo gallery, learning resources, calendar, social media links, and a dropdown nav bar to access the various parts of the site.</footer>
 
 
 
