--- a/azmushroomseason.html
+++ b/azmushroomseason.html
@@ -3,6 +3,7 @@
   <head>
     <title>Arizona Mushroom Foraging Season
     </title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
   </head>
 
   <body>
