Add divs, css classes and id selector

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <center><h1><font face="courier" color="#663300">Foraging for Wild Mushrooms of Arizona</font></h1>
     <img src="mush1.jpg" alt="Mushrooms in the White Mountains, AZ">
     <p><i>Photo by Britt Flowers - White Mountain Range of Arizona</i></center>
-    <p>
+
+    <div class="div1"><center>
+      <h1><font face="courier" color ="#663300">
+      About Mushroom Foraging</font></h1></center>
+      <p id="paragraph1">
     <font face="courier" color="#000000">
     There are thousands of species of wild mushrooms that exist throughout Arizona. Some are edible, while many are not. When it comes to edibility, being armed with knowledge is imperative to your health as some species can be deadly. Foraging for mushrooms is not only a lot of fun and a great learning experience... but also a way to feel more connected to nature and the food it has to offer. Nothing is more gratifying than stumbling upon a thick patch of delicious Chanterelles in the forest that you can cook up for dinner. The key to mushroom identification is to keep handy guidebooks while foraging and take thorough examination of all parts of the fungi. Further clarification can be made via spore printing, or asking a local mycologist. It is best to only consume a tiny amount of your first find of any fungi and wait. This allows you to be sure that you have properly identified the mushroom and that no ill effects will be had. Once the mushroom has passed the edibility test, enjoy the rest!
     </font>
-    <p>
-      <h1><font face="courier" color="#663300">Foraging Equipment & Use</font></h1>
+    <br>
+      <center><h1><font face="courier" color="#663300">Foraging Equipment & Use</font></h1>
       <table width="600" border="1">
         <tr>
           <th width="100">Tools For Foraging</th>
@@ -34,9 +38,16 @@
           <td>A Guidebook</td>
           <td>A mushroom guidebook is best to carry on your foray to allow for identification. Cell phone service is not always readily available out in the forest, so having a guidebook that is specific to the species that inhabit your area is the best way to help you identify the fungi.</td>
         </tr>
-      </table>
-    <p><h1><font face="courier" color="#663300">Basic Precautions</font></h1>
-    <p>
+      </table></center>
+
+      <br><br>
+
+      </div><br><br>
+
+    <div class="div2">
+    <br><center>
+    <h1><font face="courier" color="#663300">Basic Precautions</font></h1></center>
+    <hr>
       <ul>
         <li>If you cannot confidently identify a species of mushroom, <strong>DO NOT EAT IT!</strong></li>
         <li>Do not mix multiple mushroom species in one meal, unless you have eaten them separately prior and have previously identified and consumed them.</li>
@@ -49,24 +60,35 @@
         <li>Many species have look-a-likes, so it is <i>imperative</i> that you do a thorough investigation of all parts of a mushroom to confirm it's species and that it is not a look-a-like.</li>
         <li><strong>Soil can be toxic.</strong> Toxicity can come from where it grew, not just the mushroom itself. Lawns and mulch are often chemically treated. Beware of harvesting from any lawn or area that may have been treated with pesticides or other chemical compounds.</li>
       </ul>
-    <p>
-      <h1><font face="courier" color="#663300">Edible Species Found in Arizona</font></h1><p>
-      <i>Here are some delicious species of mushrooms you can forage for in Arizona!</i><p>
-      <b>For a complete list of edible mushrooms of Arizona by species and season <a href="./azmushroomseason.html">CLICK HERE</a></b><p>
-      <h2><font face="courier" color="#663300">Chanterelle Mushroom (<i>Cantharellus Cibarius</i>)</font></h2><p>
-      <img src="chantmush.jpg" alt="Chanterelle Mushroom"><p>
+      </div><br><br>
+
+      <div class="div3">
+      <center><h1><font face="courier" color="#663300">Edible Species Found in Arizona</font></h1>
+      <i>Here are some delicious species of mushrooms you can forage for in Arizona!</i>
+      <br><br>
+      <b>For a complete list of edible mushrooms of Arizona by species and season <a href="./azmushroomseason.html">CLICK HERE</a></b></center>
+      <br><hr><br>
+      <center><h2><font face="courier" color="#663300">Chanterelle Mushroom (<i>Cantharellus Cibarius</i>)</font></h2><p>
+      <img src="chantmush.jpg" alt="Chanterelle Mushroom"><br>
       <i>Photo Credit: Britt Flowers</i>
-    <p>
-      <h2><font face="courier" color="#663300">Oyster Mushroom (<i>Genus Pleurotus</i>)</font></h2><p>
-      <img src="oystermush.jpg" alt="Oyster Mushroom"><p>
+      <br>
+      <h2><font face="courier" color="#663300">Oyster Mushroom (<i>Genus Pleurotus</i>)</font></h2>
+      <p>
+      <img src="oystermush.jpg" alt="Oyster Mushroom">
+      <br>
       <i>Photo Credit: www.tanelorn.us</i>
-    <p>
-      <h2><font face="courier" color="#663300">Boletus Barrowsii Mushroom</font></h2><p>
-      <img src="boletusbarrowsii.jpg" alt="Boletus Barrowsii"><p>
+      <br>
+      <h2><font face="courier" color="#663300">Boletus Barrowsii Mushroom</font></h2>
+      <p>
+      <img src="boletusbarrowsii.jpg" alt="Boletus Barrowsii">
+      <br>
       <i>Photo Credit: Arizona Mushroom Forum</i>
-    <p>
-      <footer><h2><font face="courier" color="#663300">More About Arizona Mushrooms</font></h2><p>
-      The <a href="http://www.arizona-mushrooms.org">Arizona Mushroom Forum</a> is a great website to find out more about mushroom foraging in Arizona. The website is very well-organized and easy to navigate. It contains tables, forms, search buttons, blog posts, a discussion forum, photo gallery, learning resources, calendar, social media links, and a dropdown nav bar to access the various parts of the site.</footer>
+      </p></div><br><br>
+      <div class="div4">
+      <footer><center><h2><font face="courier" color="#663300">More About Arizona Mushrooms</font></h2></center>
+      <br>
+      The <a href="http://www.arizona-mushrooms.org">Arizona Mushroom Forum</a> is a great website to find out more about mushroom foraging in Arizona. The website is very well-organized and easy to navigate. It contains tables, forms, search buttons, blog posts, a discussion forum, photo gallery, learning resources, calendar, social media links, and a dropdown nav bar to access the various parts of the site.</footer><br>
+      </center></div>
 
   </body>
 </html>
