Change link colors

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="div1"><center>
       <h1><font face="courier" color ="#663300">
       About Mushroom Foraging</font></h1></center>
-      <p id="paragraph1">
+    <p id="paragraph1">
     <font face="courier" color="#000000">
     There are thousands of species of wild mushrooms that exist throughout Arizona. Some are edible, while many are not. When it comes to edibility, being armed with knowledge is imperative to your health as some species can be deadly. Foraging for mushrooms is not only a lot of fun and a great learning experience... but also a way to feel more connected to nature and the food it has to offer. Nothing is more gratifying than stumbling upon a thick patch of delicious Chanterelles in the forest that you can cook up for dinner. The key to mushroom identification is to keep handy guidebooks while foraging and take thorough examination of all parts of the fungi. Further clarification can be made via spore printing, or asking a local mycologist. It is best to only consume a tiny amount of your first find of any fungi and wait. This allows you to be sure that you have properly identified the mushroom and that no ill effects will be had. Once the mushroom has passed the edibility test, enjoy the rest!
     </font>
@@ -66,7 +66,7 @@
       <center><h1><font face="courier" color="#663300">Edible Species Found in Arizona</font></h1>
       <i>Here are some delicious species of mushrooms you can forage for in Arizona!</i>
       <br><br>
-      <b>For a complete list of edible mushrooms of Arizona by species and season <a href="./azmushroomseason.html">CLICK HERE</a></b></center>
+      <b>For a complete list of edible mushrooms of Arizona by species and season <a href="./azmushroomseason.html" target="_blank">CLICK HERE</a></b></center>
       <br><hr><br>
       <center><h2><font face="courier" color="#663300">Chanterelle Mushroom (<i>Cantharellus Cibarius</i>)</font></h2><p>
       <img src="chantmush.jpg" alt="Chanterelle Mushroom"><br>
@@ -87,7 +87,7 @@
       <div class="div4">
       <footer><center><h2><font face="courier" color="#663300">More About Arizona Mushrooms</font></h2></center>
       <br>
-      The <a href="http://www.arizona-mushrooms.org">Arizona Mushroom Forum</a> is a great website to find out more about mushroom foraging in Arizona. The website is very well-organized and easy to navigate. It contains tables, forms, search buttons, blog posts, a discussion forum, photo gallery, learning resources, calendar, social media links, and a dropdown nav bar to access the various parts of the site.</footer><br>
+      The <a href="http://www.arizona-mushrooms.org" target="_blank">Arizona Mushroom Forum</a> is a great website to find out more about mushroom foraging in Arizona. The website is very well-organized and easy to navigate. It contains tables, forms, search buttons, blog posts, a discussion forum, photo gallery, learning resources, calendar, social media links, and a dropdown nav bar to access the various parts of the site.</footer><br>
       </center></div>
 
   </body>
