Add div and update header

--- a/azmushroomseason.html
+++ b/azmushroomseason.html
@@ -7,13 +7,15 @@
   </head>
 
   <body>
-  <h1><font face="courier" color="#663300">Arizona Mushroom Foraging - Species by Season</font></h1><p>
-  O = Occasional/rare/out of season.<p>
-  X = In season, not common.<p>
-  XX = In season, common.<p>
-  XXX = Found profusely in season.<p>
-    <img src="mushchart1.png" alt="mushroom chart"><p>
-    <img src="mushchart2.png" alt="mushroom chart"><p>
+  <center><h1><font face="courier" color="#663300">Arizona Mushroom Foraging - Species by Season</font></h1></center>
+  <div class="div5"><br>
+  O = Occasional/rare/out of season.<br>
+  X = In season, not common.<br>
+  XX = In season, common.<br>
+  XXX = Found profusely in season.<br><br>
+  </div><br>
+    <img src="mushchart1.png" alt="mushroom chart"><br>
+    <img src="mushchart2.png" alt="mushroom chart"><br>
     <img src="mushchart3.png" alt="mushroom chart">
 
   </body>
