--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   </head>
   <body>
     <center><h1><font face="courier" color="#663300">Foraging for Wild Mushrooms of Arizona</font></h1>
-    <img src="mush1.jpg" alt="Mushrooms in the White Mountains, AZ">
+    <img src="mush1.jpg" class="responsiveimg1" alt="Mushrooms in the White Mountains, AZ">
     <p><i>Photo by Britt Flowers - White Mountain Range of Arizona</i></center>
-
     <div class="div1"><center>
       <h1><font face="courier" color ="#663300">
       About Mushroom Foraging</font></h1></center>
@@ -40,7 +39,7 @@
         </tr>
       </table></center>
 
-      <br><br>
+      <br><br><br>
 
       </div><br><br>
 
@@ -60,6 +59,7 @@
         <li>Many species have look-a-likes, so it is <i>imperative</i> that you do a thorough investigation of all parts of a mushroom to confirm it's species and that it is not a look-a-like.</li>
         <li><strong>Soil can be toxic.</strong> Toxicity can come from where it grew, not just the mushroom itself. Lawns and mulch are often chemically treated. Beware of harvesting from any lawn or area that may have been treated with pesticides or other chemical compounds.</li>
       </ul>
+      <br><br>
       </div><br><br>
 
       <div class="div3">
@@ -68,19 +68,19 @@
       <br><br>
       <b>For a complete list of edible mushrooms of Arizona by species and season <a href="./azmushroomseason.html" target="_blank">CLICK HERE</a></b></center>
       <br><hr><br>
-      <center><h2><font face="courier" color="#663300">Chanterelle Mushroom (<i>Cantharellus Cibarius</i>)</font></h2><p>
-      <img src="chantmush.jpg" alt="Chanterelle Mushroom"><br>
+      <center><h2><font face="courier" color="#663300">Chanterelle Mushroom (<i>Cantharellus Cibarius</i>)</font></h2><br>
+      <img src="chantmush.jpg" class="mush1" alt="Chanterelle Mushroom"><br>
       <i>Photo Credit: Britt Flowers</i>
       <br>
       <h2><font face="courier" color="#663300">Oyster Mushroom (<i>Genus Pleurotus</i>)</font></h2>
-      <p>
-      <img src="oystermush.jpg" alt="Oyster Mushroom">
+      <br>
+      <img src="oystermush.jpg" class="mush2" alt="Oyster Mushroom">
       <br>
       <i>Photo Credit: www.tanelorn.us</i>
       <br>
       <h2><font face="courier" color="#663300">Boletus Barrowsii Mushroom</font></h2>
-      <p>
-      <img src="boletusbarrowsii.jpg" alt="Boletus Barrowsii">
+      <br>
+      <img src="boletusbarrowsii.jpg" class="mush3" alt="Boletus Barrowsii">
       <br>
       <i>Photo Credit: Arizona Mushroom Forum</i>
       </p></div><br><br>
@@ -89,6 +89,5 @@
       <br>
       The <a href="http://www.arizona-mushrooms.org" target="_blank">Arizona Mushroom Forum</a> is a great website to find out more about mushroom foraging in Arizona. The website is very well-organized and easy to navigate. It contains tables, forms, search buttons, blog posts, a discussion forum, photo gallery, learning resources, calendar, social media links, and a dropdown nav bar to access the various parts of the site.</footer><br>
       </center></div>
-
   </body>
 </html>
