Make azmushroomseason page responsive

--- a/azmushroomseason.html
+++ b/azmushroomseason.html
@@ -8,15 +8,16 @@
 
   <body>
   <center><h1><font face="courier" color="#663300">Arizona Mushroom Foraging - Species by Season</font></h1></center>
-  <div class="div5"><br>
+  <div class="div5"><br><center>
   O = Occasional/rare/out of season.<br>
   X = In season, not common.<br>
   XX = In season, common.<br>
-  XXX = Found profusely in season.<br><br>
+  XXX = Found profusely in season.</center>
+  <br>
   </div><br>
-    <img src="mushchart1.png" alt="mushroom chart"><br>
-    <img src="mushchart2.png" alt="mushroom chart"><br>
-    <img src="mushchart3.png" alt="mushroom chart">
+    <img src="mushchart1.png" class="mushchart1" alt="mushroom chart"><br>
+    <img src="mushchart2.png" class="mushchart2" alt="mushroom chart"><br>
+    <img src="mushchart3.png" class="mushchart3" alt="mushroom chart">
 
   </body>
 </html>
